--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "express-test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.14.0",
-    "mongodb": "^2.2.5",
-    "mongoose": "^4.5.9",
-    "multer": "^1.2.0"
-  }
+    "name": "express-test",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "test": "mocha test/**/*.js",
+        "test-watch": "nodemon --exec 'npm test'"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "1.15.2",
+        "cookie-parser": "1.4.3",
+        "express": "^4.14.0",
+        "mongodb": "2.2.5",
+        "mongoose": "4.5.9",
+        "multer": "1.2.0"
+    },
+    "devDependencies": {
+        "chai": "3.5.0",
+        "expect": "^1.20.2",
+        "mocha": "3.1.2",
+        "supertest": "^2.0.1"
+    }
 }
