--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js",
-        "test": "mocha test/**/*.js",
+        "dev": "nodemon --exec 'npm start'",
+        "test": "export NODE_ENV=test && mocha test/**/**/*.js",
         "test-watch": "nodemon --exec 'npm test'"
     },
     "keywords": [],
