--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "1.15.2",
     "cookie-parser": "1.4.3",
     "express": "^4.14.0",
+    "lodash": "^4.17.4",
     "mongodb": "2.2.5",
     "mongoose": "4.5.9",
     "multer": "1.2.0",
