--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon --exec 'npm start'",
-        "test": "export NODE_ENV=test && mocha test/**/**/*.js",
-        "test-watch": "nodemon --exec 'npm test'"
-    },
-    "engines": {
-        "node": "6.9.1"
+        "test-func": "export NODE_ENV=test && mocha test/funcional/**/*.js",
+        "test": "mocha test/unit/**/*.js",
+        "test-watch": "nodemon --exec 'npm test-func'"
     },
     "keywords": [],
     "author": "",
@@ -18,7 +16,7 @@
     "dependencies": {
         "body-parser": "1.15.2",
         "cookie-parser": "1.4.3",
-        "express": "^4.14.0",
+        "express": "^4.16.3",
         "lodash": "^4.17.4",
         "mongodb": "2.2.5",
         "mongoose": "4.5.9",
