--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "body-parser": "1.15.2",
+        "body-parser": "^1.18.3",
         "cookie-parser": "1.4.3",
         "express": "^4.16.3",
-        "lodash": "^4.17.4",
+        "lodash": "^4.17.10",
         "mongodb": "2.2.5",
         "mongoose": "4.5.9",
         "multer": "1.2.0",
