--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
         "cookie-parser": "1.4.3",
         "express": "^4.16.3",
         "lodash": "^4.17.10",
-        "mongodb": "2.2.5",
-        "mongoose": "4.5.9",
+        "mongodb": "^3.1.6",
+        "mongoose": "^5.2.15",
         "multer": "1.2.0",
         "q": "^1.4.1"
     },
