--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "mongodb": "^3.1.6",
         "mongoose": "^5.2.15",
         "multer": "1.2.0",
-        "q": "^1.4.1"
+        "q": "^1.4.1",
+        "jsonwebtoken": "8.4.0"
     },
     "devDependencies": {
         "chai": "3.5.0",
