--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "mongoose": "^5.2.15",
         "multer": "1.2.0",
         "q": "^1.4.1",
-        "jsonwebtoken": "8.4.0"
+        "jsonwebtoken": "8.4.0",
+        "cors": "2.8.5"
     },
     "devDependencies": {
         "chai": "3.5.0",
